# Ember

./: .gitignore  .gitmodules  CMakeLists.txt  COMMA_LESS_SYNTAX_INVESTIGATION.md  KNOWN_ISSUES.md  a.embc  basic_nested.embc  basic_obj.embc  complex_nested.embc  debug.embc  debug_mixin_parsing.ember  debug_parser_state.ember  direct_interp  direct_interp.c  main.c  mini.embc  minimal.embc  multi_level.embc  nested_final.embc  nested_one.embc  nested_prop_vm.embc  nested_vm_test.embc  one_prop.embc  set_nested.embc  simple_init.embc  simple_nested.embc  simple_obj2.embc  simple_props.embc  simple_test.embc  test_current.embc  test_debug.ember  test_function.embc  test_function_expressions.ember  test_nested.ember  test_new_syntax.ember  test_runner  test_simple.ember  test_simple_function.ember  update.txt  workaround.embc
docs/: event_system_current_status.md  event_system_design.md  nested_property_assignment_fix.md  nested_property_implementation.md  nested_property_vm.md  object_properties.md
example_scripts/: colon_syntax_demo.ember  future_syntax.ember
example_scripts/campfire_game/: campfire_data.ember  campfire_events.ember  campfire_functions.ember  campfire_main.ember  campfire_mixins.ember
include/: builtins.h  compiler.h  event_system.h  lexer.h  parser.h  raylib_module.h  runtime.h  sdl_module.h  utils.h  virtual_machine.h
scripts/: future_syntax.ember
src/: builtins.c  compiler.c  emberpm.c  event_system.c  lexer.c  parser.c  raylib_module.c  runtime.c  sdl_module.c  utils.c  virtual_machine.c
test_out/: nested_prop_final.embc  set_nested.embc  simple_obj2.embc
test_scripts/: basic_nested.ember  basic_obj.ember  complex_nested.ember  debug_nested.ember  debug_node_type.ember  debug_props.ember  method_test.ember  mini.ember  minimal_nested_test.ember  multi_level.ember  nested_objects.ember  nested_one.ember  nested_prop_final.ember  nested_prop_vm_test.ember  nested_property.ember  nested_property_demo.ember  nested_property_direct.ember  nested_property_test.ember  object_methods.ember  object_test.ember  one_property.ember  property_access_debug.ember  property_test.ember  run_all_tests.ember  run_tests.sh  runner  set_nested.ember  simple_nested.ember  simple_nested_property.ember  simple_nested_test.ember  simple_obj2.ember  simple_obj_init.ember  simple_object.ember  simple_object_test.ember  simple_props.ember  stubs.c  test_01_variables.ember  test_02_arrays.ember  test_03_objects.ember  test_04_functions.ember  (+35 more)
